--- a/style.css
+++ b/style.css
@@ -29,29 +29,9 @@ li {
 /** color **/
 
 :root {
-    --Red: hsl(0, 78%, 62%);
-    --Cyan: hsl(180, 62%, 55%);
-    --Orange: hsl(34, 97%, 64%);
-    --Blue: hsl(212, 86%, 64%);
     --VeryDarkBlue: hsl(234, 12%, 34%);
     --GrayishBlue: hsl(229, 6%, 66%);
     --VeryLightGray: hsl(0, 0%, 98%);
-}
-
-.red {
-    color: var(--Red)
-}
-
-.cyan {
-    color: var(--Cyan)
-}
-
-.orange {
-    color: var(--Orange)
-}
-
-.blue {
-    color: var(--Blue)
 }
 
 .darkblue {
@@ -104,10 +84,96 @@ body {
 }
 
 .top {
-    padding: 25px;
     text-align: center;
+    margin: 0 auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+
+.top h1 {
+    letter-spacing: 0.5px;
+    margin-bottom: 8px;
+}
+
+.top h2 {
+    margin-bottom: 8px;
 }
 
 .bottom {
     padding: 5px;
+}
+
+.bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card {
+    width: 320px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 25px 2px rgba(163, 165, 174, 0.459);
+    margin-bottom: 30px;
+}
+
+.card .card-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 260px;
+}
+
+.card .card-wrapper h5 {
+    margin-bottom: 10px;
+}
+
+.card .card-wrapper p {
+    margin-bottom: 30px;
+}
+
+.card .card-wrapper .card-image {
+    align-self: flex-end;
+    width: 70px;
+}
+
+.supervisor {
+    border-top: 5px solid hsl(180, 62%, 55%);
+}
+
+.team {
+    border-top: 5px solid hsl(0, 78%, 62%);
+}
+
+.karma {
+    border-top: 5px solid hsl(34, 97%, 64%);
+}
+
+.calculator {
+    border-top: 5px solid hsl(212, 86%, 64%);
+}
+
+@media screen and (min-width: 1200px) {
+    .bottom {
+        height: 560px;
+    }
+    .supervisor {
+        position: relative;
+        right: 350px;
+        top: 140px;
+    }
+    .team {
+        bottom: 280px;
+        position: relative;
+    }
+    .karma {
+        bottom: 280px;
+        position: relative;
+    }
+    .calculator {
+        bottom: 700px;
+        left: 350px;
+        position: relative;
+    }
 }
