--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ li {
 }
 
 
-/** color **/
+/** text-color **/
 
 :root {
     --VeryDarkBlue: hsl(234, 12%, 34%);
@@ -97,6 +97,19 @@ body {
 
 .top h2 {
     margin-bottom: 8px;
+}
+
+@media screen and (min-width: 900px) {
+    .top {
+        width: 500px;
+        margin-bottom: 70px;
+    }
+    .top h1 {
+        font-size: 34px;
+    }
+    .top h2 {
+        font-size: 36px;
+    }
 }
 
 .bottom {
